# serval-ubuntu-touch

./: .gitignore  README.md  app.desktop  build  build.sh  serval-ubuntu-touch.kdev4  serval.conf  serval.geany
.kdev4/: serval-ubuntu-touch.kdev4
click/: app.desktop  manifest.json
src/: checkifinstalled.sh  set-up.sh  startservald.sh  stopservald.sh
src/ui/: CMakeLists.txt  build-ui.sh  ui-deps.sh
src/ui/js/: js_test.js
src/ui/plugins/: CMakeLists.txt
src/ui/plugins/Cxxb/: CMakeLists.txt  cxxb.cpp  cxxb.h  plugin.cpp  plugin.h  qmldir
src/ui/qml/: About.qml  BasePage.qml  Install.qml  Main.qml  Use.qml
